--- a/blog/src/styles.css
+++ b/blog/src/styles.css
@@ -4,6 +4,8 @@
    padding: 0;
    box-sizing: border-box;
    font-size: 16px;
+   font-family: Helvetica, Arial, sans-serif;
+   color: #fff;
 }
 
 body {
