Big card finalizado

--- a/blog/src/app/components/big-card/big-card.component.html
+++ b/blog/src/app/components/big-card/big-card.component.html
@@ -1,1 +1,25 @@
-<p>big-card works!</p>
+<div class="big-card__container">
+	<div class="app-big-card__image">
+		<img
+			src="https://www.pulsecarshalton.co.uk/wp-content/uploads/2016/08/jk-placeholder-image.jpg"
+			alt="Imagem"
+		/>
+	</div>
+
+	<div class="app-big-card__title">
+		<h2>
+			<a href="#"> What is Lorem Ipsum?</a>
+		</h2>
+	</div>
+
+	<div class="app-big-card__text">
+		<p>
+			<a href="#">
+				Lorem Ipsum is simply dummy text of the printing and typesetting
+				industry. Lorem Ipsum has been the industry's standard dummy text
+				ever since the 1500s, when an unknown printer took a galley of type
+				and scrambled it to make a type specimen book.
+			</a>
+		</p>
+	</div>
+</div>
