--- a/blog/src/styles.css
+++ b/blog/src/styles.css
@@ -4,10 +4,26 @@
    padding: 0;
    box-sizing: border-box;
    font-size: 16px;
-   font-family: Helvetica, Arial, sans-serif;
+   font-family: 'Segoe UI';
    color: #fff;
 }
 
 body {
    background-color: #111;
+}
+
+h1 , h1 > a {
+   font-size: 2rem;
+}
+
+h2 , h2 > a{
+   font-size: 1.5rem;
+}
+
+p {
+   font-size: 1rem;
+}
+
+a {
+   text-decoration: none;
 }
