Small card finalizado

--- a/blog/src/app/components/big-card/big-card.component.css
+++ b/blog/src/app/components/big-card/big-card.component.css
@@ -1,7 +1,5 @@
 .big-card__container {
-   margin: 50px 0;
    padding: 0.5rem;
-   border: 2px solid white;
    max-width: 400px;
    min-height: 400px;
 
@@ -10,13 +8,13 @@
    align-items: flex-start;
    gap: 0.5rem;
 
-   text-align: left;
+   text-align: justify;
 }
 
-.app-big-card__image img {
+.big-card__image img {
    max-width: 100%;
 }
 
-.app-big-card__text > p {
+.big-card__text > p {
    color: #cccccc;
 }
