--- a/blog/src/app/components/small-card/small-card.component.html
+++ b/blog/src/app/components/small-card/small-card.component.html
@@ -1,1 +1,19 @@
-<p>small-card works!</p>
+<div class="small-card__container">
+	<div class="small-card__article">
+		<div class="small-card__image">
+			<img
+				src="https://www.pulsecarshalton.co.uk/wp-content/uploads/2016/08/jk-placeholder-image.jpg"
+				alt="Imagem"
+			/>
+		</div>
+
+		<div class="small-card__title">
+			<h3>
+				<a href="#">
+					There are many variations of passages of Lorem Ipsum available,
+					but the majority have suffered alteration.</a
+				>
+			</h3>
+		</div>
+	</div>
+</div>
