--- a/blog/src/app/pages/home/home.component.html
+++ b/blog/src/app/pages/home/home.component.html
@@ -3,7 +3,10 @@
    <div class="article__main">
       <app-big-card></app-big-card>
    </div>
+   
    <div class="article__others">
-      
+      <app-small-card></app-small-card>
+      <app-small-card></app-small-card>
+      <app-small-card></app-small-card>
    </div>
 </div>
