--- a/blog/src/app/components/big-card/big-card.component.html
+++ b/blog/src/app/components/big-card/big-card.component.html
@@ -1,18 +1,18 @@
 <div class="big-card__container">
-	<div class="app-big-card__image">
+	<div class="big-card__image">
 		<img
-			src="https://www.pulsecarshalton.co.uk/wp-content/uploads/2016/08/jk-placeholder-image.jpg"
+			src="https://conteudo.imguol.com.br/c/noticias/1c/2022/05/24/imagem-criada-no-imagen-prototipo-do-google-que-cria-imagens-baseadas-em-texto-neste-caso-um-cachorro-corgi-andando-de-bicicleta-na-times-square-usando-oculos-de-sol-e-chapeu-de-praia-1653397634334_v2_900x506.jpg"
 			alt="Imagem"
 		/>
 	</div>
 
-	<div class="app-big-card__title">
+	<div class="big-card__title">
 		<h2>
 			<a href="#"> What is Lorem Ipsum?</a>
 		</h2>
 	</div>
 
-	<div class="app-big-card__text">
+	<div class="big-card__text">
 		<p>
 			<a href="#">
 				Lorem Ipsum is simply dummy text of the printing and typesetting
