--- a/blog/src/app/components/menu-bar/menu-bar.component.html
+++ b/blog/src/app/components/menu-bar/menu-bar.component.html
@@ -1,1 +1,9 @@
-<p>menu-bar works!</p>
+<div class="menu-bar__container">
+   <ul>
+      <li><a href="https://www.linkedin.com/in/thalesacardoso/" target="_blank">Linkedin</a></li>
+      <li><span>•</span></li>
+      <li><a href="https://github.com/thalesacardoso" target="_blank">Github</a></li>
+      <li><span>•</span></li>
+      <li><a href="https://www.youtube.com/" target="_blank">Youtube</a></li>
+   </ul>
+</div>
