--- a/blog/src/app/pages/home/home.component.html
+++ b/blog/src/app/pages/home/home.component.html
@@ -1,11 +1,15 @@
 <app-menu-bar></app-menu-bar>
 <app-menu-title></app-menu-title>
+
 <div class="article__container">
    <div class="article__main">
       <app-big-card></app-big-card>
    </div>
    
    <div class="article__others">
+      <app-small-card></app-small-card>
+      <app-small-card></app-small-card>
+      <app-small-card></app-small-card>
       <app-small-card></app-small-card>
       <app-small-card></app-small-card>
       <app-small-card></app-small-card>
