--- a/blog/src/app/components/big-card/big-card.component.css
+++ b/blog/src/app/components/big-card/big-card.component.css
@@ -1,6 +1,6 @@
 .big-card__container {
-   padding: 0.5rem;
-   max-width: 400px;
+   margin: 0 1rem 5rem;
+   max-width: 700px;
    min-height: 400px;
 
    display: flex;
