--- a/blog/src/app/pages/home/home.component.css
+++ b/blog/src/app/pages/home/home.component.css
@@ -1,9 +1,15 @@
 .article__container {
+   max-width: 1200px;
+   margin: 0 auto;
    display: flex;
    justify-content: center;
    align-items: flex-start;
    gap: 1.5rem;
 }
+
+/* .article__main {
+   background-color: blue;
+} */
 
 .article__others {
    display: flex;
