Versão tablet + mobile parte 2

--- a/blog/src/app/components/big-card/big-card.component.css
+++ b/blog/src/app/components/big-card/big-card.component.css
@@ -1,7 +1,7 @@
 .big-card__container {
    margin: 0 1rem 5rem;
-   max-width: 700px;
-   min-height: 400px;
+   width: 100%;
+   max-width: 900px;
 
    display: flex;
    flex-direction: column;
