--- a/blog/src/app/components/small-card/small-card.component.css
+++ b/blog/src/app/components/small-card/small-card.component.css
@@ -16,10 +16,10 @@
 }
 
 .small-card__title {
-   text-align: justify;
+   text-align: left;
 }
 
 .small-card__title>h3>a {
-   font-size: 1.2rem;
-   font-weight: 500;
+   font-size: 1rem;
+   font-weight: 400;
 }
