--- a/blog/src/app/components/small-card/small-card.component.responsivo.css
+++ b/blog/src/app/components/small-card/small-card.component.responsivo.css
@@ -15,23 +15,17 @@
    .small-card__image>img {
       width: 150px;
    }
-   
-   .small-card__title>h3>a {
-      font-size: 1rem;
-      font-weight: 400;
-   }
 }
 
 /*******************************
    VERSÃO P/ SMARTPHONE
 *******************************/
 @media screen and (max-width: 420px) {
+   .small-card__article {
+      max-width: 700px;
+   }
+   
    .small-card__image>img {
       max-width: 120px;
-   }
-
-   .small-card__title>h3>a {
-      font-size: 1rem;
-      font-weight: 400;
    }
 }
