Inserindo dados dinamicamente

--- a/blog/src/app/components/big-card/big-card.component.html
+++ b/blog/src/app/components/big-card/big-card.component.html
@@ -1,24 +1,20 @@
 <div class="big-card__container">
 	<div class="big-card__image">
 		<img
-			src="https://conteudo.imguol.com.br/c/noticias/1c/2022/05/24/imagem-criada-no-imagen-prototipo-do-google-que-cria-imagens-baseadas-em-texto-neste-caso-um-cachorro-corgi-andando-de-bicicleta-na-times-square-usando-oculos-de-sol-e-chapeu-de-praia-1653397634334_v2_900x506.jpg"
-			alt="Imagem"
+			src="{{image}}" alt="{{title}}"
 		/>
 	</div>
 
 	<div class="big-card__title">
 		<h2>
-			<a href="#"> What is Lorem Ipsum?</a>
+			<a href="#">{{title}}</a>
 		</h2>
 	</div>
 
 	<div class="big-card__text">
 		<p>
 			<a href="#">
-				Lorem Ipsum is simply dummy text of the printing and typesetting
-				industry. Lorem Ipsum has been the industry's standard dummy text
-				ever since the 1500s, when an unknown printer took a galley of type
-				and scrambled it to make a type specimen book.
+				{{description}}
 			</a>
 		</p>
 	</div>
