--- a/blog/src/app/pages/home/home.component.html
+++ b/blog/src/app/pages/home/home.component.html
@@ -2,16 +2,49 @@
 <app-menu-title></app-menu-title>
 
 <div class="article__container">
-   <div class="article__main">
-      <app-big-card></app-big-card>
-   </div>
-   
-   <div class="article__others">
-      <app-small-card></app-small-card>
-      <app-small-card></app-small-card>
-      <app-small-card></app-small-card>
-      <app-small-card></app-small-card>
-      <app-small-card></app-small-card>
-      <app-small-card></app-small-card>
-   </div>
+	<div class="article__main">
+		<app-big-card
+			title="What is Lorem Ipsum?"
+			image="https://wallpapers-clan.com/wp-content/uploads/2023/11/red-ferrari-supercar-desktop-wallpaper-preview.jpg"
+			description="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis viverra consectetur placerat. Sed sodales vulputate condimentum. Sed scelerisque, nibh vitae porta commodo, purus purus tristique lorem, non viverra dolor ipsum hendrerit nunc. Maecenas facilisis sapien bibendum felis tincidunt, pharetra gravida massa egestas. Morbi blandit vulputate sodales. Cras dignissim, arcu ac condimentum dignissim, dolor dolor efficitur magna, quis sagittis justo elit eget turpis. Fusce fringilla libero ante, a volutpat odio semper nec. Vestibulum rutrum, lectus quis placerat luctus, nisl arcu dictum turpis, quis mollis metus neque in quam. Sed mattis venenatis imperdiet. Aliquam nec arcu lacus. Suspendisse vulputate, nulla ac fermentum condimentum, tortor dolor congue felis, et aliquam risus erat id enim. Nam magna ipsum, auctor nec porta a, semper ac orci. Duis ut pulvinar felis. Sed in luctus dui. Mauris lacinia ullamcorper imperdiet. Etiam fringilla maximus urna at vestibulum."
+		>
+		</app-big-card>
+	</div>
+
+	<div class="article__others">
+		<app-small-card
+			image="https://s2.glbimg.com/GSKr6391dglIuCGKSZtBkC8sFqQ=/1200x630/s.glbimg.com/jo/g1/f/original/2014/03/31/z1000img_6312.jpg"
+			description="Nam sed rhoncus mi. Curabitur euismod arcu sed pharetra commodo. In egestas blandit dolor at interdum. Maecenas sit amet elementum ex, at blandit felis. "
+		></app-small-card>
+
+		<app-small-card
+			image="https://wallpaper29.files.wordpress.com/2016/11/papel-de-parede-do-carro-ferrari-2017.jpg"
+			description="Proin cursus, magna accumsan aliquam imperdiet, eros enim rhoncus est, vitae luctus est nibh porta magna. Sed accumsan ligula at ligula facilisis, ac elementum lectus ultrices."
+		>
+		</app-small-card>
+
+		<app-small-card
+			image="https://www.gran-turismo.com/gtsport/livery/6990150752969687561_23.jpg"
+			description="Nam ultrices laoreet euismod. Curabitur at tincidunt purus, pulvinar venenatis nibh. Cras lacinia, tortor quis scelerisque consequat, ligula neque viverra enim, non venenatis eros velit eu sapien. "
+		>
+		</app-small-card>
+
+		<app-small-card
+			image="https://i0.wp.com/citymagazine.si/wp-content/uploads/2022/01/lamborghini-urus-by-mansory-and-mtm.jpg?fit=1920%2C1080&ssl=1"
+			description="Suspendisse potenti. Sed non sagittis arcu. Vestibulum cursus, libero nec venenatis ultrices, elit magna euismod lorem."
+		>
+		</app-small-card>
+
+		<app-small-card
+			image="https://images-na.ssl-images-amazon.com/images/S/pv-target-images/a6d7bc6cbe57e2daa33a6f14607b2dfb8dca3c500ddbab8c730c241f7606c8fd._RI_TTW_SX1080_FMjpg_.jpg"
+			description="Fusce sollicitudin viverra metus, maximus feugiat libero venenatis eget. Morbi sed aliquam urna, tempus convallis arcu."
+		>
+		</app-small-card>
+
+		<app-small-card
+			image="https://content2.kawasaki.com/ContentStorage/KMB/ProductTrimGroup/32/fd2ee516-af68-4acd-beaf-209f1108deef.jpg?w=750"
+			description="Duis auctor velit nec ligula malesuada, at malesuada eros vulputate. Nunc nisi eros, semper a velit sed, finibus bibendum magna."
+		>
+		</app-small-card>
+	</div>
 </div>
