Inserindo dados dinamicamente 2 + correções

--- a/blog/src/app/pages/home/home.component.responsivo.css
+++ b/blog/src/app/pages/home/home.component.responsivo.css
@@ -9,6 +9,11 @@
       gap: 1rem;
    }
 
+   .article__main {
+      width: 100%;
+      max-width: 700px;
+   }
+
    .article__others {
       width: 100%;
       align-items: center;
