--- a/blog/src/app/pages/home/home.component.css
+++ b/blog/src/app/pages/home/home.component.css
@@ -7,7 +7,12 @@
    gap: 1.5rem;
 }
 
+.article__main {
+   width: 60%;
+}
+
 .article__others {
+   width: 40%;
    display: flex;
    flex-direction: column;
    gap: 1rem;
