--- a/blog/src/app/pages/content/content.component.html
+++ b/blog/src/app/pages/content/content.component.html
@@ -1,7 +1,7 @@
 <div class="content__container">
 
 	<div class="content__btn">
-		<a href=""> << VOLTAR</a>
+		<a [routerLink]="['']"> << VOLTAR</a>
 	</div>
 
 	<div class="content__image">
