--- a/blog/src/app/components/small-card/small-card.component.html
+++ b/blog/src/app/components/small-card/small-card.component.html
@@ -1,12 +1,12 @@
 <div class="small-card__container">
 	<div class="small-card__article">
 		<div class="small-card__image">
-			<img src="{{image}}" alt="Imagem" />
+			<img src="{{ image }}" alt="Imagem" />
 		</div>
 
 		<div class="small-card__title">
 			<h3>
-				<a href="#"> {{ description }}</a>
+				<a [routerLink]="['content', id]"> {{ description }}</a>
 			</h3>
 		</div>
 	</div>
